U.T. added for me.component

--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -2,28 +2,28 @@
   <mat-card>
     <mat-card-title>
       <div fxLayout="row" fxLayoutAlign="start center">
-        <button mat-icon-button (click)="back()">
+        <button mat-icon-button (click)="back()" data-testid="back-button">
           <mat-icon>arrow_back</mat-icon>
         </button>
-        <h1>User information</h1>
+        <h1 data-testid="user-info-title">User information</h1>
       </div>
     </mat-card-title>
     <mat-card-content>
-      <div *ngIf="user" fxLayout="column" fxLayoutAlign="start center">
-        <p>Name: {{ user.firstName }} {{ user.lastName | uppercase }}</p>
-        <p>Email: {{ user.email }}</p>
-        <p *ngIf="user.admin" class="my2">You are admin</p>
-        <div *ngIf="!user.admin" fxLayout="column" class="my2" fxLayoutAlign="center center">
-          <p>Delete my account:</p>
-          <button mat-raised-button color="warn" (click)="delete()">
+      <div *ngIf="user" fxLayout="column" fxLayoutAlign="start center" data-testid="user-info-area">
+        <p data-testid="user-names">Name: {{ user.firstName }} {{ user.lastName | uppercase }}</p>
+        <p data-testid="user-email">Email: {{ user.email }}</p>
+        <p *ngIf="user.admin" class="my2" data-testid="admin-status">You are admin</p>
+        <div *ngIf="!user.admin" fxLayout="column" class="my2" fxLayoutAlign="center center" data-testid="not-admin-status">
+          <p data-testid="delete-account-label">Delete my account:</p>
+          <button mat-raised-button color="warn" (click)="delete()" data-testid="delete-account-button">
             <mat-icon>delete</mat-icon>
-            <span class="ml1">Detail</span>
+            <span class="ml1">Delete</span>
           </button>
         </div>
         <div fxLayoutAlign="space-between center" class="p2 w100">
 
-          <p><i>Create at: </i> {{ user.createdAt | date: 'longDate'}}</p>
-          <p><i>Last update: </i> {{ user.updatedAt| date: 'longDate'}}</p>
+          <p data-testid="user-created-at"><i>Create at: </i> {{ user.createdAt | date: 'longDate'}}</p>
+          <p data-testid="user-updated-at"><i>Last update: </i> {{ user.updatedAt| date: 'longDate'}}</p>
         </div>
       </div>
     </mat-card-content>
