--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -18,7 +18,7 @@
                 </mat-form-field>
             </mat-card-content>
             <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid" data-testid="submit-button">Submit</button>
-            <p *ngIf="onError" class="error">An error occurred</p>
+            <p *ngIf="onError" class="error" data-testid="error-message">An error occurred</p>
         </form>
     </mat-card>
 </div>
