--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -19,7 +19,7 @@
                 </mat-form-field>
             </mat-card-content>
             <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid" data-testid="submit-button">Submit</button>
-            <span *ngIf="onError" class="error ml2">An error occurred</span>
+            <span *ngIf="onError" class="error ml2" data-testid="error-message">An error occurred</span>
         </form>
     </mat-card>
 </div>
