--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span>Yoga app</span>
     <div *ngIf="$isLogged() | async; else notLogged">
       <span routerLink="sessions" class="link">Sessions</span>
-      <span routerLink="me" class="link">Account</span>
+      <span routerLink="me" class="link" data-testid="nav-account-button">Account</span>
       <span (click)="logout()" class="link">Logout</span>
     </div>
     <ng-template #notLogged>
